# Sum

./: .gitignore  AGENTS.md  ANALYSIS.md  AUDIT.md  CLAUDE.md  CODE_REVIEW.md  README.md  ROADMAP.md  Sum.py  SumImprovedbyChatGPT.py  SumImprovedbyChatGPTv2.py  SumImprovedbyClaudeCode.,py  SumImprovedbyClaudeCode.py  SumImprovedbyClaudeCodev2.py  SumImprovedbyClaudeCodev3.py  TEST_COVERAGE_REPORT.md  pyproject.toml  requirements-dev.txt  requirements-notebook.txt  requirements.txt
.github/workflows/: ci.yml
demos/: __init__.py  summing_methods.py
history/: README.md  __init__.py  chatgpt_v1_entrypoint.py  chatgpt_v2_test_snapshot.py  claude_v3_menu_demo.py  original_two_number.py
notebooks/: historical_progression.ipynb
tests/: __init__.py  conftest.py  test_analysis_functions.py  test_claude_input.py  test_cli.py  test_custom_implementations.py  test_edge_cases.py  test_input_validation.py  test_integration.py  test_original_summing_methods.py  test_summation_methods.py
