[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "sum"
version = "0.1.0"
description = "Educational Python examples of summation techniques."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "GPL-3.0-only" }
dependencies = []

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py39"
